@@ -1,18 +1,17 @@
 package org.basex.api.xmldb;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 
-import org.junit.*;
+import org.junit.jupiter.api.*;
 import org.xmldb.api.base.*;
 import org.xmldb.api.modules.*;
 
 /**
  * This class tests the XMLDB/API CollectionManagementService implementation.
  *
- * @author BaseX Team 2005-17, BSD License
+ * @author BaseX Team 2005-20, BSD License
  * @author Christian Gruen
  */
-@SuppressWarnings("all")
 public final class CollectionManagementServiceTest extends XMLDBBaseTest {
   /** CollectionManagementService string. */
   private static final String CMS = "CollectionManagementService";
@@ -23,56 +22,69 @@ public final class CollectionManagementServiceTest extends XMLDBBaseTest {
   /** Collection. */
   private Database db;
   /** Collection. */
-  private Collection coll;
+  private Collection collection;
   /** Resource. */
-  private CollectionManagementService serv;
+  private CollectionManagementService service;
 
-  @Before
-  public void setUp() throws Exception {
+  /**
+   * Initializes a test.
+   * @throws Exception any exception
+   */
+  @BeforeEach public void setUp() throws Exception {
     createDB();
     final Class<?> c = Class.forName(DRIVER);
-    db = (Database) c.newInstance();
-    coll = db.getCollection(PATH, LOGIN, PW);
-    serv = (CollectionManagementService) coll.getService(CMS, "1.0");
+    db = (Database) c.getDeclaredConstructor().newInstance();
+    collection = db.getCollection(PATH, LOGIN, PW);
+    service = (CollectionManagementService) collection.getService(CMS, "1.0");
   }
 
-  @After
-  public void tearDown() throws Exception {
-    coll.close();
+  /**
+   * Finalizes a test.
+   * @throws Exception any exception
+   */
+  @AfterEach public void tearDown() throws Exception {
+    collection.close();
     dropDB();
   }
 
-  @Test
-  public void testCreateCollection() throws Exception {
+  /**
+   * Test.
+   * @throws Exception any exception
+   */
+  @Test public void testCreateCollection() throws Exception {
     // create a collection
-    final Collection coll1 = serv.createCollection(TEMP);
-    assertNotSame(coll, coll1);
+    final Collection coll1 = service.createCollection(TEMP);
+    assertNotSame(collection, coll1);
 
     // add a document
-    final Resource res1 = coll.createResource(TEST, XMLResource.RESOURCE_TYPE);
+    final Resource res1 = collection.createResource(TEST, XMLResource.RESOURCE_TYPE);
     res1.setContent("<xml/>");
     coll1.storeResource(res1);
     coll1.close();
   }
 
-  @Test
-  public void testRemoveCollection() throws Exception {
-    serv.removeCollection(TEMP);
-    assertNull("Collection was not removed.", db.getCollection(URL + TEMP, null, null));
+  /**
+   * Test.
+   * @throws Exception any exception
+   */
+  @Test public void testRemoveCollection() throws Exception {
+    service.removeCollection(TEMP);
+    assertNull(db.getCollection(URL + TEMP, null, null), "Collection was not removed.");
   }
 
-  @Test
-  public void testGetName() throws Exception {
-    assertEquals(CMS, serv.getName());
+  /**
+   * Test.
+   * @throws Exception any exception
+   */
+  @Test public void testGetName() throws Exception {
+    assertEquals(CMS, service.getName());
   }
 
-  @Test
-  public void testGetVersion() throws Exception {
-    assertEquals("1.0", serv.getVersion());
-  }
-
-  @Test
-  public void testSetCollection() {
-    // nothing serious to test...
+  /**
+   * Test.
+   * @throws Exception any exception
+   */
+  @Test public void testGetVersion() throws Exception {
+    assertEquals("1.0", service.getVersion());
   }
 }
