@@ -1,69 +1,79 @@
 package org.basex.api.xmldb;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 
-import org.junit.*;
+import org.junit.jupiter.api.*;
 import org.xmldb.api.base.*;
 import org.xmldb.api.modules.*;
 
 /**
  * This class tests the XMLDB/API ResourceIterator implementation.
  *
- * @author BaseX Team 2005-17, BSD License
+ * @author BaseX Team 2005-20, BSD License
  * @author Christian Gruen
  */
-@SuppressWarnings("all")
 public final class ResourceIteratorTest extends XMLDBBaseTest {
   /** Collection. */
-  private Collection coll;
+  private Collection collection;
   /** Resource. */
-  private XPathQueryService serv;
+  private XPathQueryService service;
 
-  @Before
-  public void setUp() throws Exception {
+  /**
+   * Initializes a test.
+   * @throws Exception any exception
+   */
+  @BeforeEach public void setUp() throws Exception {
     createDB();
-    final Class<?> c = Class.forName(DRIVER);
-    final Database database = (Database) c.newInstance();
-    coll = database.getCollection(PATH, LOGIN, PW);
-    serv = (XPathQueryService) coll.getService("XPathQueryService", "1.0");
+    final Class<?> clzz = Class.forName(DRIVER);
+    final Database database = (Database) clzz.getDeclaredConstructor().newInstance();
+    collection = database.getCollection(PATH, LOGIN, PW);
+    service = (XPathQueryService) collection.getService("XPathQueryService", "1.0");
   }
 
-  @After
-  public void tearDown() throws Exception {
-    coll.close();
+  /**
+   * Finalizes a test.
+   * @throws Exception any exception
+   */
+  @AfterEach public void tearDown() throws Exception {
+    collection.close();
     dropDB();
   }
 
-  @Test
-  public void testHasMoreResources() throws Exception {
+  /**
+   * Test.
+   * @throws Exception any exception
+   */
+  @Test public void testHasMoreResources() throws Exception {
     // test result
-    ResourceIterator iter = serv.query("/").getIterator();
-    assertTrue("Result expected.", iter.hasMoreResources());
+    ResourceIterator iter = service.query("/").getIterator();
+    assertTrue(iter.hasMoreResources(), "Result expected.");
 
     // test empty result
-    iter = serv.query("//Unknown").getIterator();
-    assertFalse("Result expected.", iter.hasMoreResources());
+    iter = service.query("//Unknown").getIterator();
+    assertFalse(iter.hasMoreResources(), "Result expected.");
   }
 
-  @Test
-  public void testNextResource() throws Exception {
+  /**
+   * Test.
+   * @throws Exception any exception
+   */
+  @Test public void testNextResource() throws Exception {
     // count down number of results
-    final ResourceSet set = serv.query("//node()");
+    final ResourceSet set = service.query("//node()");
     final ResourceIterator iter = set.getIterator();
     long size = set.getSize();
     while(iter.hasMoreResources()) {
       iter.nextResource();
       --size;
     }
-    assertEquals("Wrong result size.", 0, size);
+    assertEquals(0, size, "Wrong result size.");
 
     // test if iterator delivers more results
     try {
       iter.nextResource();
       fail("No resources left.");
     } catch(final XMLDBException ex) {
-      assertEquals("Wrong error code.", ErrorCodes.NO_SUCH_RESOURCE,
-          ex.errorCode);
+      assertEquals(ErrorCodes.NO_SUCH_RESOURCE, ex.errorCode, "Wrong error code.");
     }
   }
 }
