@@ -1,135 +1,159 @@
 package org.basex.api.xmldb;
 
-import static org.junit.Assert.*;
+import static org.junit.jupiter.api.Assertions.*;
 
 import org.basex.io.*;
-import org.junit.*;
+import org.junit.jupiter.api.*;
 import org.xmldb.api.base.*;
 import org.xmldb.api.modules.*;
 
 /**
  * This class tests the XMLDB/API XPathQueryService implementation.
  *
- * @author BaseX Team 2005-17, BSD License
+ * @author BaseX Team 2005-20, BSD License
  * @author Christian Gruen
  */
-@SuppressWarnings("all")
 public final class XPathQueryServiceTest extends XMLDBBaseTest {
   /** Collection. */
-  private Collection coll;
+  private Collection collection;
   /** Resource. */
-  private XPathQueryService serv;
+  private XPathQueryService service;
 
-  @Before
-  public void setUp() throws Exception {
+  /**
+   * Initializes a test.
+   * @throws Exception any exception
+   */
+  @BeforeEach public void setUp() throws Exception {
     createDB();
     final Class<?> c = Class.forName(DRIVER);
-    final Database database = (Database) c.newInstance();
-    coll = database.getCollection(PATH, LOGIN, PW);
-    serv = (XPathQueryService) coll.getService("XPathQueryService", "1.0");
+    final Database database = (Database) c.getDeclaredConstructor().newInstance();
+    collection = database.getCollection(PATH, LOGIN, PW);
+    service = (XPathQueryService) collection.getService("XPathQueryService", "1.0");
   }
 
-  @After
-  public void tearDown() throws Exception {
-    coll.close();
+  /**
+   * Finalizes a test.
+   * @throws Exception any exception
+   */
+  @AfterEach public void tearDown() throws Exception {
+    collection.close();
     dropDB();
   }
 
-  @Test
-  public void testSetNamespace() throws Exception {
+  /**
+   * Test.
+   * @throws Exception any exception
+   */
+  @Test public void testSetNamespace() throws Exception {
     // overwriting namespaces
-    serv.setNamespace("hell", "a");
-    serv.setNamespace("hell", "o");
-    assertEquals("Namespace not found.", "o", serv.getNamespace("hell"));
+    service.setNamespace("hell", "a");
+    service.setNamespace("hell", "o");
+    assertEquals("o", service.getNamespace("hell"), "Namespace not found.");
 
     // testing invalid URIs
     try {
-      serv.setNamespace("hell", null);
+      service.setNamespace("hell", null);
       fail("Null URIs are not allowed.");
-    } catch(final XMLDBException ex) { }
+    } catch(final XMLDBException ignored) { }
 
     try {
-      coll.createResource("hans", "");
+      collection.createResource("hans", "");
       fail("Empty URIs are not allowed.");
-    } catch(final XMLDBException ex) { }
+    } catch(final XMLDBException ignored) { }
   }
 
-  @Test
-  public void testGetNamespace() throws Exception {
+  /**
+   * Test.
+   * @throws Exception any exception
+   */
+  @Test public void testGetNamespace() throws Exception {
     // testing former namespace
-    assertNull("Namespaces shouldn't be global.", serv.getNamespace("hell"));
+    assertNull(service.getNamespace("hell"), "Namespaces shouldn't be global.");
 
     // setting and requesting default namespace
-    serv.setNamespace(null, "def");
-    assertEquals("No default Namespace.", "def", serv.getNamespace(null));
-    assertEquals("No default Namespace.", "def", serv.getNamespace(""));
+    service.setNamespace(null, "def");
+    assertEquals("def", service.getNamespace(null), "No default Namespace.");
+    assertEquals("def", service.getNamespace(""), "No default Namespace.");
   }
 
-  @Test
-  public void testRemoveNamespace() throws Exception {
+  /**
+   * Test.
+   * @throws Exception any exception
+   */
+  @Test public void testRemoveNamespace() throws Exception {
     // set and remove namespace
-    serv.setNamespace("hell", "a");
-    serv.removeNamespace("hell");
-    assertNull("Namespace was not removed.", serv.getNamespace("hell"));
+    service.setNamespace("hell", "a");
+    service.removeNamespace("hell");
+    assertNull(service.getNamespace("hell"), "Namespace was not removed.");
 
     // set and remove default namespace
-    serv.setNamespace(null, "def");
-    serv.removeNamespace("");
-    assertNull("Namespace was not removed.", serv.getNamespace(null));
+    service.setNamespace(null, "def");
+    service.removeNamespace("");
+    assertNull(service.getNamespace(null), "Namespace was not removed.");
   }
 
-  @Test
-  public void testClearNamespace() throws Exception {
+  /**
+   * Test.
+   * @throws Exception any exception
+   */
+  @Test public void testClearNamespace() throws Exception {
     // set and clear namespace
-    serv.setNamespace("hell", "a");
-    serv.clearNamespaces();
-    assertNull("Namespace was not removed.", serv.getNamespace("hell"));
+    service.setNamespace("hell", "a");
+    service.clearNamespaces();
+    assertNull(service.getNamespace("hell"), "Namespace was not removed.");
   }
 
-  @Test
-  public void testQuery() throws Exception {
+  /**
+   * Test.
+   * @throws Exception any exception
+   */
+  @Test public void testQuery() throws Exception {
     // catch query errors
     try {
-      serv.query("1+");
+      service.query("1+");
       fail("Buggy query was accepted.");
-    } catch(final XMLDBException ex) { }
+    } catch(final XMLDBException ignored) { }
 
-    assertEquals("Wrong result size.", 1, serv.query("/").getSize());
+    assertEquals(1, service.query("/").getSize(), "Wrong result size.");
 
     // add second document
-    final Resource res = coll.createResource(DOC2, XMLResource.RESOURCE_TYPE);
-    res.setContent(new IOFile(DOCPATH, DOC2).read());
-    coll.storeResource(res);
-    assertEquals("Wrong result size", 6, serv.query("//node()").getSize());
+    final Resource resource = collection.createResource(DOC2, XMLResource.RESOURCE_TYPE);
+    resource.setContent(new IOFile(DOCPATH, DOC2).read());
+    collection.storeResource(resource);
+    assertEquals(6, service.query("//node()").getSize(), "Wrong result size");
 
     // remove second document
-    coll.removeResource(res);
+    collection.removeResource(resource);
   }
 
-  @Test
-  public void testQueryResource() throws Exception {
-     assertEquals("Wrong result size", 3, serv.queryResource(DOC1, "//node()").getSize());
+  /**
+   * Test.
+   * @throws Exception any exception
+   */
+  @Test public void testQueryResource() throws Exception {
+     assertEquals(3, service.queryResource(DOC1, "//node()").getSize(), "Wrong result size");
 
     // catch query errors
     try {
-      serv.queryResource("UnknownDoc", "/");
+      service.queryResource("UnknownDoc", "/");
       fail("Query was executed on unknown document.");
     } catch(final XMLDBException ignore) { }
   }
 
-  @Test
-  public void testGetName() throws Exception {
-    assertEquals("XPathQueryService", serv.getName());
+  /**
+   * Test.
+   * @throws Exception any exception
+   */
+  @Test public void testGetName() throws Exception {
+    assertEquals("XPathQueryService", service.getName());
   }
 
-  @Test
-  public void testGetVersion() throws Exception {
-    assertEquals("1.0", serv.getVersion());
-  }
-
-  @Test
-  public void testSetCollection() throws Exception {
-    // nothing serious to test...
+  /**
+   * Test.
+   * @throws Exception any exception
+   */
+  @Test public void testGetVersion() throws Exception {
+    assertEquals("1.0", service.getVersion());
   }
 }
 
