@@ -12,20 +12,12 @@ import org.basex.io.*;
 /**
  * Console reader.
  *
- * @author BaseX Team 2005-17, BSD License
+ * @author BaseX Team 2005-20, BSD License
  * @author Dimitar Popov
  */
-public abstract class ConsoleReader implements AutoCloseable {
+public abstract class ConsoleReader implements AutoCloseable, PasswordReader {
   /** Password prompt. */
   private static final String PW_PROMPT = PASSWORD + COLS;
-
-  /** Password reader. */
-  private final PasswordReader pwReader = new PasswordReader() {
-    @Override
-    public String password() {
-      return readPassword();
-    }
-  };
 
   /**
    * Reads next line. If no input, then the method blocks the thread.
@@ -34,22 +26,8 @@ public abstract class ConsoleReader implements AutoCloseable {
    */
   public abstract String readLine(String prompt);
 
-  /**
-   * Reads a password.
-   * @return password as plain text
-   */
-  protected abstract String readPassword();
-
   @Override
   public abstract void close();
-
-  /**
-   * Create a new password reader for this console.
-   * @return a new instance of {@link PasswordReader}
-   */
-  public final PasswordReader pwReader() {
-    return pwReader;
-  }
 
   /**
    * Creates a new instance.
@@ -59,8 +37,8 @@ public abstract class ConsoleReader implements AutoCloseable {
     if(JLineConsoleReader.isAvailable()) {
       try {
         return new JLineConsoleReader();
-      } catch(final Exception ex) {
-        Util.errln(ex);
+      } catch(final Throwable th) {
+        Util.debug(th);
       }
     }
     return new SimpleConsoleReader();
@@ -88,7 +66,7 @@ public abstract class ConsoleReader implements AutoCloseable {
     }
 
     @Override
-    public String readPassword() {
+    public String password() {
       Util.out(PW_PROMPT);
       return Util.password();
     }
@@ -125,10 +103,8 @@ public abstract class ConsoleReader implements AutoCloseable {
     /** Implementation. */
     private final Object reader;
 
-    /** File history class. */
-    private final Class<?> fileHistoryC;
     /** File history. */
-    private final Object fileHistory;
+    private final Flushable fileHistory;
 
     /**
      * Checks if JLine implementation is available?
@@ -149,12 +125,14 @@ public abstract class ConsoleReader implements AutoCloseable {
       readEcho = Reflect.method(readerC, "readLine", String.class, Character.class);
 
       // initialization
-      reader = readerC.newInstance();
+      reader = readerC.getDeclaredConstructor().newInstance();
 
       final Class<?> history = Reflect.find(JLINE_HISTORY);
-      fileHistoryC = Reflect.find(JLINE_FILE_HISTORY);
+      @SuppressWarnings("unchecked")
+      final Class<? extends Flushable> fileHistoryC = (Class<? extends Flushable>)
+          Reflect.find(JLINE_FILE_HISTORY);
       fileHistory = Reflect.get(Reflect.find(fileHistoryC, File.class),
-          new File(Prop.HOME, HISTORY_FILE));
+          new File(Prop.HOMEDIR, HISTORY_FILE));
 
       final Class<?> completer = Reflect.find(JLINE_COMPLETER);
       final Class<?> enumCompleter = Reflect.find(JLINE_ENUM_COMPLETER);
@@ -177,13 +155,17 @@ public abstract class ConsoleReader implements AutoCloseable {
     }
 
     @Override
-    public String readPassword() {
+    public String password() {
       return (String) Reflect.invoke(readEcho, reader, PW_PROMPT, PASSWORD_ECHO);
     }
 
     @Override
     public void close() {
-      Reflect.invoke(Reflect.method(fileHistoryC, "flush"), fileHistory);
+      try {
+        fileHistory.flush();
+      } catch(final IOException ex) {
+        Util.debug(ex);
+      }
     }
   }
 }
